--- a/contact.html
+++ b/contact.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="indexcs.css" />
-    <title>Document</title>
+    <title>GROUP_10_LIFELABS</title>
     <script src="script.js" type="text/javascript" ></script> 
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     <script type="text/javascript">
        emailjs.init("u1uehG0Muqxx70lKu")
     </script>
-
+    
   </head>
 
   <body>
