--- a/Streaming.html
+++ b/Streaming.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="indexcs.css" />
-    <title>Document</title>
+    <title>GROUP_10_LIFELABS</title>
   </head>
 
   <body>
